# ChatOnPayment

./: .env  .gitignore  Dockerfile  README.md  docker-compose.micro.yml  docker-compose.yml  docker-compose.yml.copy  generate-selfsigned-cert.sh  nginx.conf  nginx.conf.copy  package-lock.json  test.py
accounts/templates/: signup.html
chat/: views.py
core/: settings.py
crypto_contract/: README.md  build.sh  config.json  wallet.fc
crypto_contract/rust_ton_client/: .gitignore  Cargo.toml  README.md
crypto_contract/rust_ton_client/src/: client.rs  error.rs  lib.rs  main.rs  types.rs  wallet.rs
gateway/: nginx.conf
microservices/: README.md
microservices/accounts/: Dockerfile
microservices/accounts/app/: main.py
microservices/accounts/tests/: test_accounts.py  test_health.py
microservices/basement/: requirements.txt
microservices/basement/app/: main.py
microservices/basement/tests/: test_basement.py
microservices/chat/: requirements.txt
microservices/chat/app/: main.py
microservices/chat/tests/: test_chat.py
microservices/payments/: Dockerfile
microservices/payments/app/: main.py
microservices/resume/: requirements.txt
microservices/resume/app/: main.py
microservices/resume/tests/: test_resume.py
python_contract/: README.md  requirements.txt  setup.py
python_contract/ton_wallet_client/: __init__.py  __main__.py  client.py  error.py  types.py  wallet.py
signup/static_src/: package-lock.json  package.json
signup/templates/: base.html
telegram/: utils.py
